--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
+    "swiper": "^11.2.5",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
