--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^18.3.0",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.4.3",
-    "materialize-css": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
@@ -30,6 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.9.0"
+    "@types/canvas-confetti": "^1.9.0",
+    "source-map-explorer": "^2.5.3"
   }
 }
