--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/canvas-confetti": "^1.9.0",
     "source-map-explorer": "^2.5.3"
   }
