--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "canvas-confetti": "^1.9.3",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
